# django-client-side

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  conf.py  dev_requirements.txt  index.md  manage.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  tox.ini
.github/workflows/: pytest.yaml  release.yaml
_build/doctrees/: README.doctree  environment.pickle  index.doctree
_build/doctrees/demo/: README.doctree
_build/html/: .buildinfo  README.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
_build/html/_sources/: README.md.txt  index.md.txt
_build/html/demo/: README.html
client_side/: __init__.py  apps.py  component.py
client_side/demo/: settings.py
client_side/demo/client_side/: dependencies.py
client_side/demo/templates/: home.html
client_side/demo/templates/include/: navbar.html
client_side/templates/client_side/: link.html  script.html
client_side/templatetags/: dependency_tags.py
client_side/tests/: __init__.py  dependencies.py  settings.py  tests.py  urls.py
client_side/tests/demo/: README.md  urls.py
client_side/tests/demo/client_side/src/ajax/: csrftoken.js
demo/: requirements.txt  settings.py  urls.py  wsgi.py
demo/client_side/: dependencies.py  package-lock.json  package.json
demo/client_side/src/: lib_common.js
demo/static/css/: ie8shim.css
demo/templates/: base.html
demo/templates/include/: footer.html
docs/: CONTRIBUTING.md  HISTORY.md  README.md  requirements_docs.txt
docs/source/: authors.md  conf.py  contributing.md  index.md
docs/sphinx/: conf.py  index.md
tasks/: __init__.py  deps.py  pypi.py
tests/: __init__.py  apps.py  component.py  dependencies.py  settings.py  tests.py  urls.py
