[build-system]
requires = ["setuptools", "wheel", "twine"]
build-backend = "setuptools.build_meta"

[project]
name = 'django_client_side'
version = '0.2.0'
description = "Simple client-side dependency management for your django project."
readme = "README.md"
authors = [
    {name = 'powderflask', email = 'powderflask@gmail.com' }
]
maintainers = [
    {name = 'powderflask', email = 'powderflask@gmail.com' }
]
keywords = ['django_client_side',]
license = {text = "MIT license"}

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved ::  MIT license",
    "Framework :: Django",
]
requires-python = '>=3.7, <4.0'

dependencies = [
    'django >= 2.0',
    'asgiref ~= 3.7.2',
    'sqlparse ~= 0.4.4',
    'typing-extensions ~= 4.6.3',
    'pip-tools ~= 6.13.0',
]

[project.optional-dependencies]
dev = [
    'bumpver >= 2023.1124',
    'build >= 0.10.0',
    'flake8 >= 6.0.0',
    'click >= 8.1',
    ]
docs = [
    'sphinx >= 7.0.1',
    'myst-parser >= 2.0.0',
]
test = [
    'pytest >= 7.3.2',
    'pytest-cov >= 4.1.0',
    'pytest-django >= 4.5.2',
    'tox >= 4.5.1',
    'coverage >= 7.2.7',
]


[project.urls] #
Homepage = 'https://github.com/powderflask/django_client_side'
Repository = 'https://github.com/powderflask/django_client_side'

[project.scripts]
"manage.py" = "django_client_side:django_manage"
