# Project Configuration
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "django_client_side"
version = "0.2.0"
requires-python = ">=3.7, <4.0"
description = "Simple client-side dependency management for your django project."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    { name = "powderflask", email = "powderflask@gmail.com" }
]
keywords = ["django_client_side",]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Framework :: Django",
]
dependencies = [
    "django",
]

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "myst-parser",
]
style = [
    "black",
    "isort",
    "flake8",
    "flake8-bugbear",
]
test = [
    "tox",
    "pytest",
    "pytest-django",
    "pytest-cov",
    "pytest-sugar",
]
utils = [
    "invoke",
    "bumpver",
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/powderflask/django_client_side"
Repository = "https://github.com/powderflask/django_client_side"

[project.scripts]
"manage.py" = "django_client_side:django_manage"


# Other Tools
[tool.setuptools]
include-package-data = true  # True by default, declarations in MANIFEST.in

[tool.setuptools.packages.find]
include = ["django_client_side", "django_client_side.*"]

[tool.bumpver]
current_version = "0.2.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version: {old_version} --> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['version = "{version}"']
"README.md" = ['Version: {version}']
"client_side/__init__.py" = ['__version__ = "{version}"']
"docs/source/conf.py" = ["version = '{version}'", "release = '{version}'"]

[tool.black]
target-version = ["py37","py38","py39","py310","py311"]

[tool.isort]
profile = "black"
skip_gitignore = true