# Project Configuration
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "django-client-side"
version = "0.3.1"
requires-python = ">=3.8, <4.0"
description = "Simple client-side dependency management for your django project."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    { name = "powderflask", email = "powderflask@gmail.com" }
]
keywords = ["django-client-side",]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Framework :: Django",
]
dependencies = [
    "django",
]

[project.optional-dependencies]
style = [
    "black",
    "isort",
    "flake8",
    "flake8-bugbear",
]
test = [
    "tox",
    "pytest",
    "pytest-django",
    "pytest-cov",
    "pytest-sugar",
]
utils = [
    "invoke",
    "bumpver",
    "build",
    "twine",
    "pip-tools",
]

[project.urls]
Homepage = "https://github.com/powderflask/django-client-side"
Repository = "https://github.com/powderflask/django-client-side"

[project.scripts]
"manage.py" = "django_client_side:django_manage"


# Other Tools
[tool.setuptools]
include-package-data = true  # True by default, declarations in MANIFEST.in

[tool.setuptools.packages.find]
include = ["client_side", "client_side.*"]

[tool.bumpver]
current_version = "0.3.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version: {old_version} --> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['version = "{version}"']
"README.md" = ['Version: {version}']
"client_side/__init__.py" = ['__version__ = "{version}"']

[tool.black]
target-version = ["py38","py39","py310","py311"]

[tool.isort]
profile = "black"
skip_gitignore = true
